<resources>
    <string name="app_name">Gastos</string>
    <string name="user">Ingrese su nombre de usuario</string>
    <string name="passwd">Ingrese su contraseña</string>
    <string name="check">Recordar contraseña</string>
    <string name="remind">¿Olvido su contraseña?</string>
    <string name="create_account">¿No tiene cuenta? Cree una</string>

    <string name="registrar">Registrar comidas</string>
    <string name="registrarTransp">Registrar transportes</string>
    <string name="registrarServicios">Registrar servicios</string>
    <string name="registrarExtra">Registrar gastos extras</string>
    <string name="registrarProximos">Programe próximos pagos</string>

    <string name="nombreGasto">Nombre del gasto</string>
    <string name="nombreServicio">Nombre del servicio</string>
    <string name="nombreProximo">Nombre del pago</string>
    <string name="establecer">Establecer pago</string>


    <string name="comida">Ingrese que fué lo que consumió</string>
    <string name="cantidad">Ingrese la cantidad</string>
    <string name="fecha">Seleccione el dia que se pago</string>
    <string name="fechaProximo">Seleccione el dia que se pagará</string>
    <string name="horaProximo">Seleccione la hora de notificación</string>
    <string name="total">Ingrese el costo total</string>
    <string name="botonAgregarCosto">Agregar gasto</string>
    <string name="btnMostrarGastos">Mostrar últimos gastos</string>
    <string name="btnMostrarPagos">Mostrar próximos pagos</string>
    <string name="btnModificarGasto">Modifique su gasto</string>

    <string name="cancelar">Cancelar pago</string>


    <string name="google_maps_key">AIzaSyBm-9pES5Jvj6H1L4opfSJfplG3tI0SVPk</string>


    <string-array name="historial">
        <item>Luz</item>
        <item>Agua</item>
        <item>Internet</item>
        <item>Gas</item>
    </string-array>
    <string-array name="registro">
        <item>Servicios</item>
        <item>Transporte</item>
        <item>Comida</item>
        <item>Extras</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
