<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SeccionComida">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/fondocomida"/>
    <!-- Superposición oscura -->
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000" /> <!-- Color negro con transparencia -->


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/seccionComida"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:text="@string/registrar"
            android:gravity="center"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/orange"/>

        <EditText
            android:id="@+id/txtComida"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:padding="25dp"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/comida"
            android:imeOptions="actionNext"
            android:textColorHint="@color/orange"
            android:imeActionLabel="sig."/>

        <EditText
            android:id="@+id/txtCantidadComida"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:padding="25dp"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/cantidad"
            android:imeOptions="actionNext"
            android:textColorHint="@color/orange"
            android:imeActionLabel="sig."/>

        <EditText
            android:id="@+id/txtFechaComida"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:padding="25dp"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/fecha"
            android:imeOptions="actionNext"
            android:imeActionLabel="sig."
            android:textColorHint="@color/orange"
            android:clickable="false"
            android:focusable="false"/>

        <EditText
            android:id="@+id/txtTotalComida"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:padding="25dp"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:hint="@string/total"
            android:imeOptions="actionDone"
            android:imeActionLabel="Listo"
            android:textColorHint="@color/orange"/>

        <Button
            android:id="@+id/addRecyclerComida"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/botonAgregarCosto"
            android:backgroundTint="@color/black"
            android:textColor="@color/orange"/>

        <Button
            android:layout_margin="20dp"
            android:id="@+id/showRecyclerComida"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/btnMostrarGastos"
            android:backgroundTint="@color/black"
            android:textColor="@color/orange"/>

        <Button
            android:layout_margin="20dp"
            android:id="@+id/updateRecyclerComida"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/btnModificarGasto"
            android:backgroundTint="@color/black"
            android:textColor="@color/orange"/>

    </LinearLayout>

</FrameLayout>
