<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SeccionServicios">

    <!-- Imagen de fondo -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/fondoservicios"/>

    <!-- Superposición oscura -->
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000" /> <!-- Color negro con transparencia -->

    <!-- Contenido principal -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/seccionServicio"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:text="@string/registrarServicios"
            android:gravity="center"
            android:textSize="40sp"
            android:textColor="@color/yellow" />

        <EditText
            android:textColor="@color/white"
            android:textStyle="bold"
            android:padding="25dp"
            android:id="@+id/txtTipoServicio"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/nombreServicio"
            android:imeOptions="actionNext"
            android:textColorHint="@color/yellow"
            android:imeActionLabel="sig." />

        <EditText
            android:textColor="@color/white"
            android:textStyle="bold"
            android:padding="25dp"
            android:id="@+id/txtFechaServicio"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:ems="10"
            android:clickable="false"
            android:focusable="false"
            android:inputType="date"
            android:hint="@string/fecha"
            android:imeOptions="actionNext"
            android:imeActionLabel="sig."
            android:textColorHint="@color/yellow" />

        <EditText
            android:textColor="@color/white"
            android:textStyle="bold"
            android:padding="25dp"
            android:id="@+id/txtTotalServicio"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:hint="@string/total"
            android:imeOptions="actionDone"
            android:imeActionLabel="Listo"
            android:textColorHint="@color/yellow" />

        <Button
            android:id="@+id/addRecyclerServicio"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_margin="20dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/botonAgregarCosto"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/showRecyclerServicio"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_margin="20dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/btnMostrarGastos"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/updateRecyclerServicio"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_margin="20dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/btnModificarGasto"
            android:textColor="@color/black" />

    </LinearLayout>
</FrameLayout>
